--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,3 +143,17 @@ body {
 .video-background {
   background-color: #C3BFB7;
 }
+
+video {
+  animation: fadeIn 0.6s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0
+  }
+
+  to {
+    opacity: 1
+  }
+}
